--- a/server/vercel.json
+++ b/server/vercel.json
@@ -14,7 +14,18 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/"
+            "dest": "/",
+            "methods": [
+                "GET",
+                "POST",
+                "PUT",
+                "DELETE",
+                "PATCH",
+                "OPTIONS"
+            ],
+            "headers": {
+                "Acess-Control-Allow-Origin": "*"
+            }
         }
     ]
 }
